--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mongo-sanitize": "^1.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/validator": "^13.15.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
