--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "validator": "^13.15.15"
   },
