--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
@@ -36,6 +38,8 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/validator": "^13.15.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
