--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "stripe": "^18.5.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
