--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "paths": {
       "@/*": ["*"]
     },
-    "moduleResolution": "node",
-    "module": "commonjs", // or ESNext if you're using ESM
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext", // or ESNext if you're using ESM
     "target": "ES2020",
     "outDir": "dist",
     "rootDir": "src",
