--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "rootDir": "src",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["src"]
 }
